@@ -220,24 +220,6 @@ describe 'select input' do
         concat(builder.input(:author, :as => :select))
       end
     end
-
-    it "should call author.find with association conditions and find_options conditions" do
-      if Formtastic::Util.rails3?
-        ::Author.should_receive(:scoped).with(:conditions => {:active => true})
-        ::Author.should_receive(:where).with({:publisher => true})
-      else
-        proxy = stub
-        ::Author.should_receive(:where).with({:active => true}).and_return(proxy)
-        proxy.should_receive(:where).with({:publisher => true})
-      end
-      
-
-      with_deprecation_silenced do
-        semantic_form_for(@new_post) do |builder|
-          concat(builder.input(:author, :as => :select, :find_options => {:conditions => {:publisher => true}}))
-        end
-      end
-    end
   end
 
   describe 'for a has_many association' do
