@@ -258,7 +258,11 @@ module CustomMacros
 
     def it_should_call_find_on_association_class_when_no_collection_is_provided(as)
       it "should call find on the association class when no collection is provided" do
-        ::Author.should_receive(:where)
+        if Formtastic::Util.rails3?
+          ::Author.should_receive(:all)
+        else
+          ::Author.should_receive(:where)
+        end
 
         concat(semantic_form_for(@new_post) do |builder|
           concat(builder.input(:author, :as => as))
